force-app/main/default/objects/Opportunity/fields/Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language__c</fullName>
    <label>Preferred Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arabic</fullName>
            </value>
            <value>
                <fullName>Awadhi</fullName>
            </value>
            <value>
                <fullName>Azerbaijani (South)</fullName>
            </value>
            <value>
                <fullName>Bengali</fullName>
            </value>
            <value>
                <fullName>Bhojpuri</fullName>
            </value>
            <value>
                <fullName>Burmese</fullName>
            </value>
            <value>
                <fullName>Chinese (Gan)</fullName>
            </value>
            <value>
                <fullName>Chinese (Hakka)</fullName>
            </value>
            <value>
                <fullName>Chinese (Jinyu)</fullName>
            </value>
            <value>
                <fullName>Chinese (Mandarin)</fullName>
            </value>
            <value>
                <fullName>Chinese (Min Nan)</fullName>
            </value>
            <value>
                <fullName>Chinese (Wu)</fullName>
            </value>
            <value>
                <fullName>Chinese (Xiang)</fullName>
            </value>
            <value>
                <fullName>Chinese (Yue/Cantonese)</fullName>
            </value>
            <value>
                <fullName>Dutch</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Gujarati</fullName>
            </value>
            <value>
                <fullName>Hausa</fullName>
            </value>
            <value>
                <fullName>Hindi</fullName>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Javanese</fullName>
            </value>
            <value>
                <fullName>Kannada</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
            <value>
                <fullName>Maithili</fullName>
            </value>
            <value>
                <fullName>Malayalam</fullName>
            </value>
            <value>
                <fullName>Marathi</fullName>
            </value>
            <value>
                <fullName>Oriya</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>