force-app/main/default/objects/Opportunity/fields/Preferred_Location__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Location__c</fullName>
    <description>Peer&apos;s preferred meeting location type</description>
    <label>Preferred Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>