force-app/main/default/objects/Opportunity/fields/Preferred_Pronouns__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Pronouns__c</fullName>
    <label>Preferred Pronouns</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>He/Him</fullName>
            </value>
            <value>
                <fullName>She/Her</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>They/Them</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>