force-app/main/default/objects/Opportunity/fields/Preferred_Schedule_Window__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Schedule_Window__c</fullName>
    <description>Peer&apos;s preferred time window for appointments</description>
    <label>Preferred Schedule Window</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Afternoon</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
            <value>
                <fullName>Flexible</fullName>
                <default>true</default>
                <label>Flexible</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>