force-app/main/default/objects/Opportunity/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <label>Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Forensics</fullName>
            </value>
            <value>
                <fullName>Senior living</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>