force-app/main/default/objects/Opportunity/fields/Prospect_Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Time_Spent__c</fullName>
    <label>Prospect Time Spent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>