force-app/main/default/objects/Opportunity/fields/pstar__Activities_Response__c.field-meta.xml
<CustomField>
    <fullName>pstar__Activities_Response__c</fullName>
    <label>Activities Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>