force-app/main/default/objects/Opportunity/fields/pstar__Activity_38__c.field-meta.xml
<CustomField>
    <fullName>pstar__Activity_38__c</fullName>
    <label>Activity 38</label>
    <length>255</length>
    <type>Text</type>
</CustomField>