force-app/main/default/objects/Opportunity/fields/pstar__Activity_A__c.field-meta.xml
<CustomField>
    <fullName>pstar__Activity_A__c</fullName>
    <label>Activity A</label>
    <length>255</length>
    <type>Text</type>
</CustomField>