force-app/main/default/objects/Opportunity/fields/pstar__Activity_C__c.field-meta.xml
<CustomField>
    <fullName>pstar__Activity_C__c</fullName>
    <label>Activity C</label>
    <length>255</length>
    <type>Text</type>
</CustomField>