force-app/main/default/objects/Opportunity/fields/pstar__Activity_D__c.field-meta.xml
<CustomField>
    <fullName>pstar__Activity_D__c</fullName>
    <label>Activity D</label>
    <length>255</length>
    <type>Text</type>
</CustomField>