force-app/main/default/objects/Opportunity/fields/pstar__Activity_G__c.field-meta.xml
<CustomField>
    <fullName>pstar__Activity_G__c</fullName>
    <label>Activity G</label>
    <length>255</length>
    <type>Text</type>
</CustomField>