force-app/main/default/objects/Opportunity/fields/pstar__Activity_H__c.field-meta.xml
<CustomField>
    <fullName>pstar__Activity_H__c</fullName>
    <label>Activity H</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>