force-app/main/default/objects/Opportunity/fields/pstar__Activity_IIH__c.field-meta.xml
<CustomField>
    <fullName>pstar__Activity_IIH__c</fullName>
    <label>Activity IIH</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>