force-app/main/default/objects/Opportunity/fields/pstar__Activity_VF1__c.field-meta.xml
<CustomField>
    <fullName>pstar__Activity_VF1__c</fullName>
    <label>Activity VF1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>