force-app/main/default/objects/Opportunity/fields/pstar__Activity_VID1__c.field-meta.xml
<CustomField>
    <fullName>pstar__Activity_VID1__c</fullName>
    <label>Activity VID1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>