force-app/main/default/objects/Opportunity/fields/pstar__Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>pstar__Additional_Info__c</fullName>
    <label>Additional Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>