force-app/main/default/objects/Opportunity/fields/pstar__Admission_Date__c.field-meta.xml
<CustomField>
    <fullName>pstar__Admission_Date__c</fullName>
    <label>Admission Date</label>
    <type>Date</type>
</CustomField>