force-app/main/default/objects/Opportunity/fields/pstar__Age__c.field-meta.xml
<CustomField>
    <fullName>pstar__Age__c</fullName>
    <label>Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>