force-app/main/default/objects/Opportunity/fields/pstar__Allergy_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>pstar__Allergy_Last_Updated__c</fullName>
    <label>Allergy Last Updated</label>
    <type>Date</type>
</CustomField>