force-app/main/default/objects/Opportunity/fields/pstar__Any_Allergies__c.field-meta.xml
<CustomField>
    <fullName>pstar__Any_Allergies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Any Allergies</label>
    <type>Checkbox</type>
</CustomField>