force-app/main/default/objects/Opportunity/fields/pstar__Are_there_pets_in_home__c.field-meta.xml
<CustomField>
    <fullName>pstar__Are_there_pets_in_home__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are there pets in home?</label>
    <type>Checkbox</type>
</CustomField>