force-app/main/default/objects/Opportunity/fields/pstar__Auth_6_or_12_Month__c.field-meta.xml
<CustomField>
    <fullName>pstar__Auth_6_or_12_Month__c</fullName>
    <label>6 or 12 Month Auth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>