force-app/main/default/objects/Opportunity/fields/pstar__Authorization_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>pstar__Authorization_Due_Date__c</fullName>
    <label>Authorization Due Date</label>
    <type>Date</type>
</CustomField>