force-app/main/default/objects/Opportunity/fields/pstar__Available_Days__c.field-meta.xml
<CustomField>
    <fullName>pstar__Available_Days__c</fullName>
    <label>Available Days (Su - Sa)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>