force-app/main/default/objects/Opportunity/fields/pstar__Available_Times__c.field-meta.xml
<CustomField>
    <fullName>pstar__Available_Times__c</fullName>
    <label>Available Times (am, pm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>