force-app/main/default/objects/Opportunity/fields/pstar__Been_victim_of_bullying__c.field-meta.xml
<CustomField>
    <fullName>pstar__Been_victim_of_bullying__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Been victim of bullying</label>
    <type>Checkbox</type>
</CustomField>