force-app/main/default/objects/Opportunity/fields/pstar__BSU__c.field-meta.xml
<CustomField>
    <fullName>pstar__BSU__c</fullName>
    <label>BSU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>