force-app/main/default/objects/Opportunity/fields/pstar__Cancelled_Reason__c.field-meta.xml
<CustomField>
    <fullName>pstar__Cancelled_Reason__c</fullName>
    <label>Cancelled Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Peer no longer interested in services</fullName>
            </value>
            <value>
                <fullName>Peer deceased</fullName>
            </value>
            <value>
                <fullName>Peer went to another agency</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
            <value>
                <fullName>Out of service area</fullName>
            </value>
            <value>
                <fullName>Does not qualify-Insurance</fullName>
            </value>
            <value>
                <fullName>Does not qualify-Diagnosis</fullName>
            </value>
            <value>
                <fullName>Incarcerated</fullName>
            </value>
            <value>
                <fullName>Not appropriate for peer support services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>