force-app/main/default/objects/Opportunity/fields/pstar__Case_Manager_Address__c.field-meta.xml
<CustomField>
    <fullName>pstar__Case_Manager_Address__c</fullName>
    <label>Case Manager Address</label>
    <type>TextArea</type>
</CustomField>