force-app/main/default/objects/Opportunity/fields/pstar__Case_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>pstar__Case_Manager_Email__c</fullName>
    <label>Case Manager Email</label>
    <type>Email</type>
</CustomField>