force-app/main/default/objects/Opportunity/fields/pstar__Case_Manager_Phone__c.field-meta.xml
<CustomField>
    <fullName>pstar__Case_Manager_Phone__c</fullName>
    <label>Case Manager Phone</label>
    <type>Phone</type>
</CustomField>