force-app/main/default/objects/Opportunity/fields/pstar__Case_Manager_Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>pstar__Case_Manager_Phone_Type__c</fullName>
    <label>Case Manager Phone Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Work</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>