force-app/main/default/objects/Opportunity/fields/pstar__Client_Signature_Source__c.field-meta.xml
<CustomField>
    <fullName>pstar__Client_Signature_Source__c</fullName>
    <label>Client Signature Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>