force-app/main/default/objects/Opportunity/fields/pstar__Communicate_via_email__c.field-meta.xml
<CustomField>
    <fullName>pstar__Communicate_via_email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Communicate via email</label>
    <type>Checkbox</type>
</CustomField>