force-app/main/default/objects/Opportunity/fields/pstar__Communicate_via_text__c.field-meta.xml
<CustomField>
    <fullName>pstar__Communicate_via_text__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Communicate via text</label>
    <type>Checkbox</type>
</CustomField>