force-app/main/default/objects/Opportunity/fields/pstar__Continued_Stay_Require__c.field-meta.xml
<CustomField>
    <fullName>pstar__Continued_Stay_Require__c</fullName>
    <label>Continued Stay Require</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>