force-app/main/default/objects/Opportunity/fields/pstar__County__c.field-meta.xml
<CustomField>
    <fullName>pstar__County__c</fullName>
    <label>County</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Allegheny</fullName>
            </value>
            <value>
                <fullName>Armstrong</fullName>
            </value>
            <value>
                <fullName>Bedford</fullName>
            </value>
            <value>
                <fullName>Berks</fullName>
            </value>
            <value>
                <fullName>Blair</fullName>
            </value>
            <value>
                <fullName>Cambria</fullName>
            </value>
            <value>
                <fullName>Carbon</fullName>
            </value>
            <value>
                <fullName>Centre</fullName>
            </value>
            <value>
                <fullName>Chester</fullName>
            </value>
            <value>
                <fullName>Clearfield</fullName>
            </value>
            <value>
                <fullName>Cumberland</fullName>
            </value>
            <value>
                <fullName>Dauphin</fullName>
            </value>
            <value>
                <fullName>Delaware</fullName>
            </value>
            <value>
                <fullName>Franklin</fullName>
            </value>
            <value>
                <fullName>Fulton</fullName>
            </value>
            <value>
                <fullName>Huntingdon</fullName>
            </value>
            <value>
                <fullName>Indiana</fullName>
            </value>
            <value>
                <fullName>Jefferson</fullName>
            </value>
            <value>
                <fullName>Juniata</fullName>
            </value>
            <value>
                <fullName>Lackawanna</fullName>
            </value>
            <value>
                <fullName>Lancaster</fullName>
            </value>
            <value>
                <fullName>Lebanon</fullName>
            </value>
            <value>
                <fullName>Lehigh</fullName>
            </value>
            <value>
                <fullName>Luzerne</fullName>
            </value>
            <value>
                <fullName>Lycoming</fullName>
            </value>
            <value>
                <fullName>Mifflin</fullName>
            </value>
            <value>
                <fullName>Monroe</fullName>
            </value>
            <value>
                <fullName>Northampton</fullName>
            </value>
            <value>
                <fullName>Perry</fullName>
            </value>
            <value>
                <fullName>Philadelphia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>