force-app/main/default/objects/Opportunity/fields/pstar__CPS_Preference__c.field-meta.xml
<CustomField>
    <fullName>pstar__CPS_Preference__c</fullName>
    <label>CPS Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>