force-app/main/default/objects/Opportunity/fields/pstar__CRS_receiving_COE_services__c.field-meta.xml
<CustomField>
    <fullName>pstar__CRS_receiving_COE_services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CRS receiving COE services</label>
    <type>Checkbox</type>
</CustomField>