force-app/main/default/objects/Opportunity/fields/pstar__DA_Inpt_Trtmnt_Hx__c.field-meta.xml
<CustomField>
    <fullName>pstar__DA_Inpt_Trtmnt_Hx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DA Inpt Trtmnt Hx</label>
    <type>Checkbox</type>
</CustomField>