force-app/main/default/objects/Opportunity/fields/pstar__DA_Inpt_TxLocation_Dates__c.field-meta.xml
<CustomField>
    <fullName>pstar__DA_Inpt_TxLocation_Dates__c</fullName>
    <label>DA Inpt TxLocation Dates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>