force-app/main/default/objects/Opportunity/fields/pstar__DA_Tx_If_Yes_Specify__c.field-meta.xml
<CustomField>
    <fullName>pstar__DA_Tx_If_Yes_Specify__c</fullName>
    <label>DA Tx If Yes Specify</label>
    <length>255</length>
    <type>Text</type>
</CustomField>