force-app/main/default/objects/Opportunity/fields/pstar__Date_Created__c.field-meta.xml
<CustomField>
    <fullName>pstar__Date_Created__c</fullName>
    <label>Date Created</label>
    <type>Date</type>
</CustomField>