force-app/main/default/objects/Opportunity/fields/pstar__Date_Dx_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>pstar__Date_Dx_Last_Updated__c</fullName>
    <label>Date Dx Last Updated</label>
    <type>Date</type>
</CustomField>