force-app/main/default/objects/Opportunity/fields/pstar__Date_of_Death__c.field-meta.xml
<CustomField>
    <fullName>pstar__Date_of_Death__c</fullName>
    <label>Date of Death</label>
    <type>Date</type>
</CustomField>