force-app/main/default/objects/Opportunity/fields/pstar__dd34_If_yes_How_long_ago__c.field-meta.xml
<CustomField>
    <fullName>pstar__dd34_If_yes_How_long_ago__c</fullName>
    <label>dd34 If yes How long ago</label>
    <length>255</length>
    <type>Text</type>
</CustomField>