force-app/main/default/objects/Opportunity/fields/pstar__Denied_Transportation__c.field-meta.xml
<CustomField>
    <fullName>pstar__Denied_Transportation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Denied Transportation</label>
    <type>Checkbox</type>
</CustomField>