force-app/main/default/objects/Opportunity/fields/pstar__Diagnosis_Intake__c.field-meta.xml
<CustomField>
    <fullName>pstar__Diagnosis_Intake__c</fullName>
    <label>Diagnosis - Intake</label>
    <length>255</length>
    <type>Text</type>
</CustomField>