force-app/main/default/objects/Opportunity/fields/pstar__Discharge_Date__c.field-meta.xml
<CustomField>
    <fullName>pstar__Discharge_Date__c</fullName>
    <label>Discharge Date</label>
    <type>Date</type>
</CustomField>