force-app/main/default/objects/Opportunity/fields/pstar__Do_Not_Bill_Mail__c.field-meta.xml
<CustomField>
    <fullName>pstar__Do_Not_Bill_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Bill Mail</label>
    <type>Checkbox</type>
</CustomField>