force-app/main/default/objects/Opportunity/fields/pstar__DOB__c.field-meta.xml
<CustomField>
    <fullName>pstar__DOB__c</fullName>
    <label>DOB</label>
    <type>Date</type>
</CustomField>