force-app/main/default/objects/Opportunity/fields/pstar__DOC_Number__c.field-meta.xml
<CustomField>
    <fullName>pstar__DOC_Number__c</fullName>
    <label>DOC Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>