force-app/main/default/objects/Opportunity/fields/pstar__Email__c.field-meta.xml
<CustomField>
    <fullName>pstar__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>