force-app/main/default/objects/Opportunity/fields/pstar__Employed__c.field-meta.xml
<CustomField>
    <fullName>pstar__Employed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employed</label>
    <type>Checkbox</type>
</CustomField>