force-app/main/default/objects/Opportunity/fields/pstar__First_Bill_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>pstar__First_Bill_Service_Date__c</fullName>
    <label>First Bill Service Date</label>
    <type>Date</type>
</CustomField>