force-app/main/default/objects/Opportunity/fields/pstar__First_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>pstar__First_Service_Date__c</fullName>
    <label>First Service Date</label>
    <type>Date</type>
</CustomField>