force-app/main/default/objects/Opportunity/fields/pstar__Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>pstar__Follow_Up__c</fullName>
    <defaultValue>TODAY()+1</defaultValue>
    <label>Follow Up</label>
    <type>Date</type>
</CustomField>